[package]
name = "led-matrix-remote"
description = "Read from stdin how a led matrix should look and send it via HTTP or MQTT to the led matrix"
version = "0.5.2"
license = "MIT"
authors = ["EdJoPaTo <led-matrix-remote-rust@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rumqttc = "0.7"

[dependencies.clap]
version = "2"
features = ["wrap_help"]

[dependencies.retry]
version = "1"
default-features = false

[dependencies.reqwest]
version = "0.11"
# Enable default features for ssl support
default-features = false
features = ["blocking"]
