[package]
name = "led-matrix-remote"
description = "Read from stdin how a led matrix should look and send it via HTTP or MQTT to the led matrix"
version = "0.6.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/led-matrix-remote"
authors = ["EdJoPaTo <led-matrix-remote-rust@edjopato.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = "=3.0.0-beta.5"
clap_generate = "=3.0.0-beta.5"

[dependencies]
rand = "0.8"
rumqttc = "0.12"

[dependencies.clap]
version = "=3.0.0-beta.5"
features = ["wrap_help"]

[dependencies.retry]
version = "1"
default-features = false

[dependencies.reqwest]
version = "0.11"
# Enable default features for ssl support
default-features = false
features = ["blocking"]
